--- a/public/result/result_au.html
+++ b/public/result/result_au.html
@@ -1,1 +1,7 @@
 <br><b><span style="color:red">2020 3 26 목요일</span></b><br>
+<br>2. <b> <a href=https://search.naver.com/search.naver?&where=news&query=QLD 학교 폐쇄&sm=tab_tmr&frm=mr&nso=so:r,p:all,a:all&sort=0>QLD 학교 폐쇄</a></b>  조회수 : 10,000+<br>
+전체 목록 : 학교는 COVID-19을 통해 별도의 조치를 취할<br>
+finished Translation <br>
+<br>6. <b> <a href=https://search.naver.com/search.naver?&where=news&query=레이싱 빅토리아&sm=tab_tmr&frm=mr&nso=so:r,p:all,a:all&sort=0>레이싱 빅토리아</a></b>  조회수 : 5,000+<br>
+RV는 금요일 회의를 이동을 제공하기 위해 마지막 순간까지 기다릴 준비 ... 어떤 참가자가 COVID-19에 긍정적 인 테스트하면?<br>
+finished Translation <br>
