--- a/public/result/result_be.html
+++ b/public/result/result_be.html
@@ -1,1 +1,16 @@
 <br><b><span style="color:red">2020 3 26 목요일</span></b><br>
+<br>1. <b> <a href=https://search.naver.com/search.naver?&where=news&query=Leukine&sm=tab_tmr&frm=mr&nso=so:r,p:all,a:all&sort=0>Leukine</a></b>  조회수 : 5,000+<br>
+칸 우드 geneesmiddel ernstig Zieke coronapatiënten helpen ... Werkt bestaand Medicijn tegen longproblemen 문 Covid-19?<br>
+finished Translation <br>
+<br>2. <b> <a href=https://search.naver.com/search.naver?&where=news&query=지도 벨기에&sm=tab_tmr&frm=mr&nso=so:r,p:all,a:all&sort=0>지도 벨기에</a></b>  조회수 : 2,000+<br>
+벨기에의 코로나지도 : 공통점 communeCoronavirus 벨기에 : 다음의 경우 분포지도 ...<br>
+finished Translation <br>
+<br>3. <b> <a href=https://search.naver.com/search.naver?&where=news&query=NASA&sm=tab_tmr&frm=mr&nso=so:r,p:all,a:all&sort=0>NASA</a></b>  조회수 : 2,000+<br>
+NASA는 클라인 stapje VERDER 톰 eerste vrouw 영업 이익 드 MAAN 테 클라인 brengenNASA이 stapje dichterbij 톰 eerste vrouw 영업 이익 드 MAAN 당신입니다 ...<br>
+finished Translation <br>
+<br>4. <b> <a href=https://search.naver.com/search.naver?&where=news&query=라라 파비안&sm=tab_tmr&frm=mr&nso=so:r,p:all,a:all&sort=0>라라 파비안</a></b>  조회수 : 2,000+<br>
+라라 파비안은 보호자를위한 노래 우리가 울려요<br>
+finished Translation <br>
+<br>8. <b> <a href=https://search.naver.com/search.naver?&where=news&query=청소년을위한 디지털&sm=tab_tmr&frm=mr&nso=so:r,p:all,a:all&sort=0>청소년을위한 디지털</a></b>  조회수 : 1,000+<br>
+연산 zoek naar 만 노트북 voor kansarme leerlingen<br>
+finished Translation <br>
